<resources>
    <string name="app_name">UShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="private_car">Private Car</string>
    <string name="taxi">Taxi</string>
    <string name="name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="type">type</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="create_event">Create event</string>
    <string name="available_seats">Available Seats</string>
    <string name="_1">1</string>
    <string name="route">Route</string>
    <string name="depart_in_30_minutes">Depart in 30 minutes</string>
    <string name="boys_only">Boys only</string>
    <string name="girls_only">Girls only</string>
    <string name="remarks">Remarks</string>
    <string name="type_something">Type something…</string>
    <string name="create">create</string>
    <string name="request">Request</string>
    <string name="sharing_event">Sharing event</string>
    <string name="title_activity_profile_edit">Edit you profile</string>
    <string name="display_name">Display name</string>
    <string name="Name">Name</string>
    <string name="bio">Bio</string>
    <string name="tell_us_about_yourself">Tell us about yourself!</string>
    <string name="contact">Contact</string>
    <string name="gender">Gender</string>
    <string name="male_female_other">Male/Female/Other</string>
    <string name="avatar">Avatar</string>
    <string name="choose_your_avatar">Choose your avatar</string>
    <string name="edit">Edit</string>
    <string name="title_activity_event">Sharing event</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="passenger">Passenger</string>
    <string name="remain">Remain:</string>
    <string name="men_only">MEN ONLY</string>
    <string name="menOnly">MEN ONLY</string>
    <string name="womenOnly">WOMEN ONLY</string>
    <string name="title_activity_rate_user">RateUserActivity</string>
    <string name="myEventTitle">My Sharing</string>

    <string-array name="entries_type_preference">
        <item>Taxi</item>
        <item>Private car</item>
    </string-array>
    <string-array name="entryvalues_type_preference">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="entries_preference">
        <item>None</item>
        <item>Men only</item>
        <item>Women only</item>
    </string-array>
    <string-array name="entryvalues_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="place_information">Place Information</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration</string>
    <string name="taxi_fare">Taxi Fare</string>
</resources>
