<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/avatar"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/avatar" />

        <ImageView
            android:id="@+id/uploaded_avatar_profileEdit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/avatar"
            android:layout_marginStart="16dp"
            android:src="@drawable/profile_icon"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/avatar"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:onClick="chooseImage"
            android:text="@string/choose_your_avatar"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploaded_avatar_profileEdit"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/display_name" />

        <EditText
            android:id="@+id/name_profileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bio"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_profileEdit"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/bio" />

        <EditText
            android:id="@+id/bio_profileEdit"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_below="@id/bio"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/tell_us_about_yourself"
            android:lines="1"
            android:maxLines="6"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/phone"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_profileEdit"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/contact" />

        <EditText
            android:id="@+id/phone_profileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="Mobile"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/gender"
            style="@style/sectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_profileEdit"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/gender" />

        <Spinner
            android:id="@+id/gender_profileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/bio_profileEdit"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submit"
                android:text="@string/button_text_save" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>